<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Utilities</string>
    <string name="tab_text_1">Misurazione</string>
    <string name="tab_text_2">Sorte</string>
    <string name="tab_text_3">Sensori</string>
    <string name="info">Info</string>
    <string name="copyright">Versione 4.2.2\n\n© 2022\nVincenzo Salvati &amp; Co\nRights Reserved.</string>
    <string name="backButton">back</string>
    <string name="AccelerometerNotSupported"><b>Accelerometro:</b> Non Supportato</string>
    <string name="GyroscopeNotSupported"><b>Giroscopio:</b> Non Supportato</string>
    <string name="MagnetometerNotSupported"><b>Magnetometro:</b> Non Supportato</string>
    <string name="BrightnessNotSupported"><b>Luminosità:</b> Non Supportato</string>
    <string name="PressureNotSupported"><b>Pressione:</b> Non Supportato</string>
    <string name="TemperatureNotSupported"><b>Temperatura:</b> Non Supportato</string>
    <string name="HumidityNotSupported"><b>Umidità:</b> Non Supportato</string>
    <string name="utilityImage">UtilityImage</string>
    <string name="accelerometer">Accelerometro</string>
    <string name="gyroscope">Giroscopio</string>
    <string name="magnometer">Magnetometro</string>
    <string name="other_Sensors">Altri sensori</string>
    <string name="infoActivity">InfoActivity</string>
    <string name="livellaActivity">LivellaActivity</string>
    <string name="bussolaActivity">BussolaActivity</string>
    <string name="dadoActivity">DadoActivity</string>
    <string name="monetaActivity">MonetaActivity</string>
    <string name="_SCFActivity">SCFActivity</string>
    <string name="settingsActivity">SettingsActivity</string>
    <string name="One_dice">1 Dado</string>
    <string name="Two_dices">2 Dadi</string>
    <string name="Roll">Gira</string>
    <string name="red_player">Giocatore rosso</string>
    <string name="blue_player">Giocatore blu</string>
    <string name="monetaWinner">Chi sarà il vincitore?</string>
    <string name="scfWinner">Chi sarà il vincitore?</string>
    <string name="txt_settings">Impostazioni</string>
    <string name="rowimageview">rowImageView</string>
    <string name="rowtextview">rowTextView</string>
    <string name="SCF_text">Sasso Carta Forbici</string>
    <string name="AltriSensoriActivity">AltriSensoriActivity</string>
    <string name="Roll_or_Shake_Dice">Clicca su \"GIRA\"\noppure \nscuoti con forza il tuo smartphone!</string>
    <string name="Roll_or_Shake_SCF">Clicca su \"SASSO CARTA FORBICI\"\noppure \nscuoti con forza il tuo smartphone!</string>
    <string name="Roll_or_Shake_Moneta">Clicca su \"VAI\"\noppure \nscuoti con forza il tuo smartphone!</string>
    <string name="Preferenze">Preference</string>
    <string name="PrefderenzeSCF">PrefderenzeSCF</string>
    <string name="PrefderenzeDado">PrefderenzeDado</string>
    <string name="PrefderenzeMoneta">PrefderenzeMoneta</string>
    <string name="CSVTextView">Registra l\'andamento dei sensori selezionati e crea i tuoi file CSV.</string>
    <string name="CSVRecommendationTextView" tools:ignore="Typos">N.B. La registrazione verrà stoppata nel momento in cui si cambierà finestra o si uscirà dall\'app Utilities.\nQualora non dovessero visualizzarsi i CSV generati, riaprire nuovamente la cartella \"Download\" della propria memoria interna.</string>
    <string name="allSensorsCheckBox">Tutti i sensori</string>
    <string name="accelCheckBox">Accelerometro</string>
    <string name="giroCheckBox">Giroscopio</string>
    <string name="magnoCheckBox">Magnetometro</string>
    <string name="LightCheckBox">Luminosità</string>
    <string name="PressureCheckBox">Pressione</string>
    <string name="TemperatureCheckBox">Temperatura</string>
    <string name="HumidityCheckBox">Umidità</string>
    <string name="larghezza">Larghezza</string>
    <string name="salva">Salva misura</string>
    <string name="altezza">Altezza</string>
    <string name="seleziona_larghezza_o_altezza">Muovi la telecamera\nsul piano di interesse\nfinchè la manina non scompare\n(per altre info clicca su "?")</string>
    <string name="titolo_della_misurazione">Titolo della misurazione</string>
    <string name="ARMeasureActivity">ARMeasureAcrivity</string>
    <string name="Moneta_button">Vai</string>
    <string name="giocatore_testa">Giocatore Testa</string>
    <string name="giocatore_croce">Giocatore Croce</string>
    <string name="todo">TODO</string>
    <string name="_0">0°</string>
    <string name="sensor_status">Stato del sensore</string>
    <string name="compass_rose_image_description">Rosa dei venti che mostra il nord magnetico</string>
    <string name="device_heading_indicator_image_description">Indica in quale direzione sta puntando il dispositivo</string>
    <string name="status_degrees_text_description">Gradi della bussola</string>
    <string name="status_cardinal_direction_text_description">Direzione cardinale della bussola</string>
    <string name="zero_degrees">0°</string>
    <string name="cardinal_direction_north">Nord</string>
    <string name="cardinal_direction_northeast">Nord-Est</string>
    <string name="cardinal_direction_east">Est</string>
    <string name="cardinal_direction_southeast">Sud-Est</string>
    <string name="cardinal_direction_south">Sud</string>
    <string name="cardinal_direction_southwest">Sud-Ovest</string>
    <string name="cardinal_direction_west">Ovest</string>
    <string name="cardinal_direction_northwest">Nord-Ovest</string>
    <string name="cardinal_direction_north_abbreviation">N</string>
    <string name="cardinal_direction_east_abbreviation">E</string>
    <string name="cardinal_direction_south_abbreviation">S</string>
    <string name="cardinal_direction_west_abbreviation">W</string>
    <string name="degree_0_text">0°</string>
    <string name="degree_30_text">30°</string>
    <string name="degree_60_text">60°</string>
    <string name="degree_90_text">90°</string>
    <string name="degree_120_text">120°</string>
    <string name="degree_150_text">150°</string>
    <string name="degree_180_text">180°</string>
    <string name="degree_210_text">210°</string>
    <string name="degree_240_text">240°</string>
    <string name="degree_270_text">270°</string>
    <string name="degree_300_text">300°</string>
    <string name="degree_330_text">330°</string>
    <string name="ok">OK</string>
    <string name="sensor_accuracy_no_contact">Sensore non disponibile</string>
    <string name="sensor_accuracy_unreliable">I valori dei sensori sono inaffidabili</string>
    <string name="sensor_accuracy_low">Bassa precisione</string>
    <string name="sensor_accuracy_medium">Precisione media</string>
    <string name="sensor_accuracy_high">Massima precisione</string>
    <string name="sensor_accuracy_image_description">Indica graficamente la precisione dei sensori</string>
    <string name="sensor_accuracy_text_description">Descrive la precisione dei sensori</string>
    <string name="sensor_error_message">Sensore non disponibile</string>
    <string name="sensor_calibration_text" tools:ignore="Typos">Puoi provare a migliorare la precisione del tuo sensore in qualsiasi momento ruotando il dispositivo in uno schema a 8.</string>
    <string name="sensor_calibration_text_description">Spiega come migliorare la precisione del sensore</string>
    <string name="how_to_use_meter">Premessa: assicurarsi di effettuare la misura in un luogo ben illuminato.</string>
    <string name="how_to_use_meter_1">1) Ispeziona l\'area con la telecamera finchè la manina non scompare;</string>
    <string name="how_to_use_meter_2">2) Scegli quale misura adoperare;</string>
    <string name="how_to_use_meter_3_1">3) Clicca sullo schermo per piazzare i cubi sui puntini bianchi apparsi sulla superfice:</string>
    <string name="how_to_use_meter_3_2">- due cubi per la larghezza;</string>
    <string name="how_to_use_meter_3_3">- un cubo per l\'altezza;</string>
    <string name="how_to_use_meter_4">4) Salva tutte le misure che desideri cliccando sul pulsante \"SALVA MISURA\";</string>
    <string name="how_to_use_meter_5">5) Clicca sull\'icona in alto a destra per usare le tue misure.</string>
    <string name="how_to_use_meter_6">P.S.</string>
    <string name="how_to_use_meter_7">- Ogni quando si cambia piano di misurazione si raccomanda di cliccare sul pulsante refresh in alto (non si perderanno le misure già acquisite).</string>
    <string name="how_to_use_meter_8">- Per cancellare le misure acquisite fino ad ora è necessario uscire e rientrare dall\'attività \"Metro\".</string>
    <string name="how_to_use_meter_9">- Se non compaiono i puntini bianchi sulla superfice (per piazzare i cubi) clicca il pulsante refresh e scansiona nuovamente la superfice di interesse.</string>
    <string name="understood">Capito</string>
    <string name="come_back_to_the_app">Torna all\'app</string>
</resources>