<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alertbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimarySurface"
    tools:ignore="Overdraw"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:weightSum="100">

        <Button
            android:id="@+id/alertbox_back"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="48"
            android:autoSizeTextType="uniform"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:text="@string/come_back_to_the_app"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_to_use_meter"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_margin="20sp"
            android:src="@drawable/info_meter_0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_to_use_meter_1"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_margin="20sp"
            android:src="@drawable/info_meter_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_to_use_meter_2"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_margin="20sp"
            android:src="@drawable/info_meter_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_to_use_meter_3_1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:text="@string/how_to_use_meter_3_2"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:text="@string/how_to_use_meter_3_3"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200sp"
                android:layout_margin="10sp"
                android:src="@drawable/info_meter_3_1" />

            <ImageView
                android:layout_width="100sp"
                android:layout_height="200sp"
                android:layout_margin="10sp"
                android:src="@drawable/info_meter_3_2" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_to_use_meter_4"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_margin="20sp"
            android:src="@drawable/info_meter_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_to_use_meter_5"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_margin="20sp"
            android:src="@drawable/info_meter_5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_to_use_meter_6"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:text="@string/how_to_use_meter_7"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_margin="20sp"
            android:src="@drawable/info_meter_6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:text="@string/how_to_use_meter_8"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_margin="20sp"
            android:src="@drawable/info_meter_7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:text="@string/how_to_use_meter_9"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_margin="20sp"
            android:src="@drawable/info_meter_9" />

        <Button
            android:id="@+id/alertbox_uderstood"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="48"
            android:autoSizeTextType="uniform"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:text="@string/understood"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="o" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>