<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="?dialogPreferredPadding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sensor_accuracy_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sensor_accuracy_image"
            android:layout_width="@dimen/sensor_alert_dialog_icon_size"
            android:layout_height="@dimen/sensor_alert_dialog_icon_size"
            android:layout_marginEnd="@dimen/sensor_alert_dialog_icon_padding"
            android:layout_marginRight="@dimen/sensor_alert_dialog_icon_padding"
            android:contentDescription="@string/sensor_accuracy_image_description"
            android:tint="@android:color/tab_indicator_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sensor_accuracy_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sensor_no_contact" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sensor_accuracy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sensor_accuracy_text_description"
            android:text="@string/sensor_accuracy_no_contact"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sensor_calibration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?dialogPreferredPadding"
        android:contentDescription="@string/sensor_calibration_text_description"
        android:text="@string/sensor_calibration_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sensor_accuracy_section" />
</androidx.constraintlayout.widget.ConstraintLayout>
