<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimarySurface"
    tools:context=".utilitiesActivity.AltriSensoriActivity"
    tools:ignore="Overdraw"
    tools:targetApi="lollipop">

    <LinearLayout
        android:id="@+id/otherSensorsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/backButton"
                android:src="?attr/actionModeCloseDrawable" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/other_Sensors"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/CSVTextView"
            android:textSize="16sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/CSVRecommendationTextView"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/recOtherSensorsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_rec"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/pauseOtherSensorsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_pause"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/stopOtherSensorsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_stop"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/direcotry"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_dir"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/allOtherSensorsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/allSensorsCheckBox"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ligCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:text="@string/LightCheckBox"
                tools:ignore="NestedWeights" />

            <CheckBox
                android:id="@+id/presCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PressureCheckBox" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/tempCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TemperatureCheckBox"
                tools:ignore="NestedWeights" />

            <CheckBox
                android:id="@+id/humCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/HumidityCheckBox" />
        </LinearLayout>

        <TextView
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/color"
            android:gravity="fill"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/speedLig"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartLight"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="5sp" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/color"
            android:gravity="fill"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/speedPre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartPressure"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="5sp" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/color"
            android:gravity="fill"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/speedTem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartTemperature"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="5sp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/color"
            android:gravity="fill"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/speedHum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartHumidity"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="5sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>