<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimarySurface"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/backButton"
        android:src="?attr/actionModeCloseDrawable"
        app:layout_constraintBottom_toTopOf="@id/compass"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15"
        tools:targetApi="lollipop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:ignore="Overdraw">

        <ImageView
            android:id="@+id/utilities"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/utilityImage"
            android:src="@drawable/utilities"
            app:layout_constraintBottom_toTopOf="@id/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".50" />

        <TextView
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/utilities"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".70" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>