<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/ux_fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/colorPrimaryDark"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_arrow_back_black" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:text="@string/salva"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/colorPrimaryDark"
            android:padding="1dp"
            app:srcCompat="@drawable/ic_share_black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@color/translucent_black">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center_horizontal"
            android:text="@string/seleziona_larghezza_o_altezza"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>


    <SeekBar
        android:id="@+id/sk_height_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="100dp"
        android:enabled="false"
        android:max="500"
        android:min="0"
        android:progress="10"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center">

        <Button
            android:id="@+id/btn_width"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:text="@string/larghezza"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_height"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:text="@string/altezza"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:src="@drawable/ic_ask"
            tools:targetApi="lollipop" />
    </LinearLayout>

</FrameLayout>